🐌 API: DELETE /v1/datasets/{dataset}
