# models/entity/schemas.go
@@ -6,8 +6,8 @@ import (
 )
 
 type Schemas struct {
-	ID           int64                  `json:"id" db:"id"`
-	SourceID     *uuid.UUID             `json:"sources_id" db:"sources_id"`
-	Schema       string                 `json:"schema" db:"schema"`
-	DiscoveredAt *helperModel.Timestamp `json:"discovered_at" db:"discovered_at"`
+	ID        int64                  `json:"id" db:"id"`
+	SourceID  *uuid.UUID             `json:"sources_id" db:"sources_id"`
+	Schema    string                 `json:"schema" db:"schema"`
+	CreatedAt *helperModel.Timestamp `json:"created_at" db:"created_at"`
 }
